research development parser and table hbs updates

--- a/bin/templates/research-development/table.hbs
+++ b/bin/templates/research-development/table.hbs
@@ -59,8 +59,8 @@
                 </div>
                 {{#if gaLink}}
                 <a target='_blank' href='{{url}}' rel='noopener'>
-                    <div class="md-button md-button--secondary">
-                        Grant Agreement
+                    <div class="md-button md-button--icon">
+                        <span class="material-symbols-outlined regular">link</span> Grant Agreement
                     </div>
                 </a>
                 {{/if}}
