--- a/bin/templates/research-development/table.hbs
+++ b/bin/templates/research-development/table.hbs
@@ -46,17 +46,25 @@
                 </div>
             </div>
             <div class="content">
-                <div>{{excerpt}}</div>
+                {{#if excerpt}}
+                <div class="excerpt">{{excerpt}}</div>
+                {{/if}}
+                {{#if domains}}
                 <div class='chip-domain'>
+                    <div class="chip-label">Domain</div>
                     <ul class='chips'>
                     {{#each domains}}<li>{{this}}</li>{{/each}}
                     </ul>
                 </div>
+                {{/if}}
+                {{#if technologies}}
                 <div class='chip-technology'>
+                    <div class="chip-label">Technology</div>
                     <ul class='chips'>
                     {{#each technologies}}<li>{{this}}</li>{{/each}}
                     </ul>
                 </div>
+                {{/if}}
                 {{#if gaLink}}
                 <a target='_blank' href='{{url}}' rel='noopener'>
                     <div class="md-button md-button--icon">
