marketing hbs team pagedata and layout updates

--- a/bin/templates/marketing-toolbox/table.hbs
+++ b/bin/templates/marketing-toolbox/table.hbs
@@ -24,7 +24,7 @@
                 {{#if source}}
                 <a target='_blank' href='{{source}}' rel='noopener'>
                     <div class="list-icon">
-                    <span class="material-symbols-outlined regular">edit_square</span>
+                    <span class="material-symbols-outlined regular">design_services</span>
                     </div>
                 </a>
                 {{/if}}
