--- a/bin/templates/research-development/eu-table.hbs
+++ b/bin/templates/research-development/eu-table.hbs
@@ -69,9 +69,7 @@
                 {{/if}}
                 {{#if gaLink}}
                 <a target='_blank' href='{{gaLink}}' rel='noopener'>
-                    <div class="md-button md-button--secondary">
-                        <span class="material-symbols-outlined regular">link</span> Grant Agreement
-                    </div>
+                    <div class="md-button md-button--secondary">Grant Agreement</div>
                 </a>
                 {{/if}}
                 <div class="ld-date-container">
