--- a/bin/templates/research-development/eu-table.hbs
+++ b/bin/templates/research-development/eu-table.hbs
@@ -75,7 +75,7 @@
                     {{/if}}
                     <div class="ld-date-container">
                         <div class="chip-label">End Date</div>
-                        <div class="ld-date">{{endDate}}</div>
+                        <div class="ld-date">{{shortDate}}</div>
                     </div>
                 </div>
             </div>
