--- a/bin/templates/ihubs/map.hbs
+++ b/bin/templates/ihubs/map.hbs
@@ -9,7 +9,7 @@
 				"name": "{{name}}",
 				"city": "{{city}}",
 				"html": [
-					"<div><div class="gridElementLogoContainer"><picture><source srcset="{{webp img}}" type="image/webp"/><img class="gridElementLogo" src="{{img}}" loading="lazy"/></picture></div></div>",
+					"<div><div class='gridElementLogoContainer'><picture><source srcset='{{webp img}}' type='image/webp'/><img class='gridElementLogo' src='{{img}}' loading='lazy'/></picture></div></div>",
 					"<div class='label-location' style='display: flex;flex-direction: row;'><h3>{{city}}</h3>{{#if country}}<img alt='{{country}}' class='flag' src='{{flagUrl}}' style='margin-left: auto;'/>{{/if}}</div>",
 					"<div class='ihub-name'>{{name}}</div>",
 					"<div class='ihub-type'>{{type}}</div>"{{#if (gt domain.length 0)}},
