--- a/bin/templates/organisations/map.hbs
+++ b/bin/templates/organisations/map.hbs
@@ -8,7 +8,7 @@
 				"type": "Organization",
 				"name": "{{name}}",
 				"html": [
-					"<div ><img class='gridElementLogo' src='{{img}}'/></div>",
+					"<div><div class='gridElementLogoContainer'><picture><source srcset='{{webp img}}' type='image/webp'/><img class='gridElementLogo' src='{{img}}' loading='lazy'/></picture></div></div>",
 					"<div class='org-name'>{{name}}</div>",
 					"<div class='membership-type'>{{type}}</div>"{{#if website}},
 					"<div class='icons'><a class='cat-website' target='_blank' href='{{website}}' rel='noopener'><span class='icon website'></span></div>"{{/if}}
