webinars card.hbs update and people layouts updates

--- a/bin/templates/webinars/card.hbs
+++ b/bin/templates/webinars/card.hbs
@@ -43,10 +43,10 @@
             </div>
         </div>
         <div class='foot'>
-            <a href="#item-{{@index}}" class='cat-info' data-modal='{{@index}}'>
+            <div class='cat-info' data-modal='{{@index}}'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
-            </a>
+            </div>
             <a class='cat-details-primary' target="_blank" href="{{companyLink}}">
                 <span class='material-symbols-outlined'>play_arrow</span>
                 Watch
