--- a/bin/templates/enablers/card.hbs
+++ b/bin/templates/enablers/card.hbs
@@ -30,10 +30,10 @@
         </div>
         <div class='foot'>
             {{#if (eq member true)}}
-            <a href='#enabler-{{createClass name}}' class='cat-info' data-modal='{{math @index "+" 6}}'>
+            <div class='cat-info' data-modal='{{math @index "+" 6}}'>
                 <span class="material-symbols-outlined">info</span>
                 More Info
-            </a>
+            </div>
             {{/if}}
             {{#if (eq member false)}}
             <span> </span>
