--- a/directories/people/style.css
+++ b/directories/people/style.css
@@ -1099,15 +1099,19 @@
         color: #002e67;
         font-weight: 400;
         line-height: 1em;
-    }
-
-    .tingle-modal__close {
-        top: 5vw;
-        right: 5vw;
         z-index: 99999;
         background: #fff;
         line-height: 0.9em;
         box-shadow: 0 0 50px 0 rgba(0, 0, 0, 1) !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        top: 20px;
+        margin: 0 auto;
+        left: auto;
+        right: auto;
+        border-radius: 4px;
     }
 
     .tingle-modal-box {
