--- a/directories/webinars/style.css
+++ b/directories/webinars/style.css
@@ -2208,19 +2208,45 @@ input[type="search"]::placeholder {
 
     /* Modal */
 
+    .tingle-modal {
+        padding: 0;
+        display: flex;
+    }
+  
     .tingle-modal__close {
         color: #002e67;
         font-weight: 400;
         line-height: 1em;
-    }
-
-    .tingle-modal__close {
-        top: 5vw;
-        right: 5vw;
         z-index: 99999;
         background: #fff;
         line-height: 0.9em;
         box-shadow: 0 0 50px 0 rgba(0, 0, 0, 1) !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        top: 20px;
+        margin: 0 auto;
+        left: auto;
+        right: 20px;
+        border-radius: 25px;
+    }
+  
+    .tingle-modal__closeLabel {
+        display: none;
+        font-family: 'Montserrat';
+        font-weight: 600;
+        padding-bottom: 4px;
+    }
+  
+    .tingle-modal-box {
+        width: 90%;
+    }
+  
+    .tingle-modal__closeIcon {
+        margin: 0;
+        line-height: normal;
     }
 
     .tingle-modal .bio-modal p {
@@ -2232,10 +2258,6 @@ input[type="search"]::placeholder {
         max-height: calc(30vh - 2rem);
         padding: 0 20px 0px;
         margin-bottom: 20px;
-    }
-
-    .tingle-modal-box {
-        width: 90%;
     }
 
     .tingle-modal-box__content {
