--- a/bin/templates/people/card.hbs
+++ b/bin/templates/people/card.hbs
@@ -1,8 +1,8 @@
 {{#each this}}
         <div id="item-{{@index}}" class="grid-item {{createClass company}} {{createClass country}} {{createClass department}} {{createClasses filters}} {{createClass domain}}">
-            <div class='f-cat active'>
+            <a class='f-cat active'>
                 {{#if bio}}
-                <div class='cat-bio' data-modal='{{@index}}'>
+                <a href='#item-{{@index}}' class='cat-bio' data-modal='{{@index}}'>
                 {{/if}}
                 <div class='city-photo-container'>
                     <picture>
@@ -11,11 +11,11 @@
                     </picture>
                 </div>
                 {{#if bio}}
-                </div>
+                </a>
                 {{/if}}
                 <div class='profile-details'>
                 {{#if bio}}
-                <div class='cat-bio' data-modal='{{@index}}'>
+                <a href='#item-{{@index}}' class='cat-bio' data-modal='{{@index}}'>
                 {{/if}}
                     <h6 class='name'>{{title}}{{name}}</h6>
                     <h4 class='position'>{{job}}</h4>
@@ -34,7 +34,7 @@
                     {{/if}}
                 </div>
                 {{#if bio}}
-                </div>
+                </a>
                 {{/if}}
                 <div class='icons'>
                     {{#if linkedIn}}
