--- a/directories/events-directory/style.css
+++ b/directories/events-directory/style.css
@@ -610,7 +610,7 @@
 
 
 .profile-picture {
-    width: 100%
+    width: 100%;
     height: 100%;
     border-radius: 50px;
 }
@@ -1811,6 +1811,11 @@ input[type="search"]::placeholder {
         width: 100%;
         margin-bottom: 40px;
         /* padding: 20px; */
+    }
+
+    .gridElementLogoContainer {
+        width: 100%;
+        padding-top: 50%;
     }
 
     .solution-name {
