--- a/directories/ihubs/style.css
+++ b/directories/ihubs/style.css
@@ -168,23 +168,28 @@ details summary::-webkit-details-marker {
     margin: 0 auto;
 }
 
-/* .gridElementLogoContainer {
+.gridElementLogoContainer {
     width:100%;
     height:0; 
     padding-top: 56%;
     position:relative;
-} */
+}
+
+
 
 .gridElementLogo {
     width: 100%;
-    /* position:absolute; 
+    position:absolute; 
     background-color: #e2e9ea;
     top:0; 
-    left:1px; */
+    left:1px;
 }
 
 .maplibregl-popup-content .gridElementLogo {
     border-radius: 4px 4px 0 0;
+    position: relative; 
+    top: inherit; 
+    left: inhert;
 }
 
 .gutter-sizer {
