--- a/bin/templates/webinars/social-media.hbs
+++ b/bin/templates/webinars/social-media.hbs
@@ -41,14 +41,25 @@
 {
   "@context": "https://schema.org",
   "@type": "VideoObject",
+  "name": "{{name}}",
+  "description": "{{excerpt}}",
+  "thumbnailUrl": "{{img}}",
   "creator":  {
-	"@type": "Organization",
-	"name": "FIWARE Foundation"
+  	"@type": "Organization",
+  	"name": "FIWARE Foundation"
   },
   "contentUrl": "{{companyLink}}",
+  "embedUrl": "{{embed companyLink}}",
   "duration": "T{{length}}M0S",
   "encodingFormat": "video/mpeg",
-  "url": "{{companyLink}}"
+  "url": "{{{companyLink}}}",
+  "width": "1280",
+  "height": "720",
+  "isFamilyFriendly": "True",
+  "inLanguage": "en-US",
+  "isPartOf": {
+    "@id": "https://www.fiware.org/community/webinars/"
+  }
 }
 </script>
 <!-- Google tag (gtag.js) -->
