--- a/bin/templates/webinars/social-media.hbs
+++ b/bin/templates/webinars/social-media.hbs
@@ -48,7 +48,7 @@
   	"@type": "Organization",
   	"name": "FIWARE Foundation"
   },
-  "contentUrl": "{{companyLink}}",
+  "contentUrl": "{{{companyLink}}}",
   "embedUrl": "{{embed companyLink}}",
   "duration": "T{{length}}M0S",
   "encodingFormat": "video/mpeg",
