--- a/bin/templates/webinars/social-media.hbs
+++ b/bin/templates/webinars/social-media.hbs
@@ -60,7 +60,7 @@
   "isPartOf": {
     "@id": "https://www.fiware.org/community/webinars/"
   },
-  "uploadDate": "{{year}}-01-01" 
+  "uploadDate": "{{year}}-01-01T10:00:00+01:00" 
 }
 </script>
 <!-- Google tag (gtag.js) -->
