--- a/bin/templates/webinars/card.hbs
+++ b/bin/templates/webinars/card.hbs
@@ -47,7 +47,7 @@
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
-            <a class='cat-details-primary' target="_blank" href="{{companyLink}}">
+            <a class='cat-details-primary' target="_blank" href="https://fiware.org/webinars/{{createClass name}}.html">
                 <span class='material-symbols-outlined'>play_arrow</span>
                 Watch
             </a>
