--- a/bin/templates/webinars/sitemap-xml.hbs
+++ b/bin/templates/webinars/sitemap-xml.hbs
@@ -8,7 +8,7 @@
 				<video:thumbnail_loc>{{img}}</video:thumbnail_loc>
 				<video:title>{{name}}</video:title>
 				<video:description>{{excerpt}}</video:description>
-				<video:player_loc>{{{companyLink}}}</video:player_loc>
+				<video:player_loc>{{{video}}}</video:player_loc>
 				<video:family_friendly>yes</video:family_friendly>
 				<video:live>no</video:live>
 			</video:video>
