--- a/bin/templates/webinars/public-card.hbs
+++ b/bin/templates/webinars/public-card.hbs
@@ -47,7 +47,11 @@
                 <span class="material-symbols-outlined">info</span>
                 More Info
             </div>
-            <a class='cat-details-primary' target="_blank" href="https://fiware.org/webinars/{{createClass name}}.html">
+            <!--a class='cat-details-primary' target="_blank" href="https://fiware.org/webinars/{{createClass name}}.html">
+                <span class='material-symbols-outlined'>play_arrow</span>
+                Watch
+            </a-->
+            <a class='cat-details-primary' target="_blank" href="{{video}}">
                 <span class='material-symbols-outlined'>play_arrow</span>
                 Watch
             </a>
