--- a/bin/templates/webinars/public-modal.hbs
+++ b/bin/templates/webinars/public-modal.hbs
@@ -27,7 +27,7 @@ var types = [
         badge: "{{{badge}}}",
         chapter: "{{{chapter}}}", 
         difficulty: {{difficulty}},
-        video: "https://www.fiware.org/webinars/{{{createClass name}}}.html",
+        video: "{{video}}",
         content: "{{content}}",  
         domain: "{{domain}}",  
         technology: "{{technology}}",
