--- a/join-us/style.css
+++ b/join-us/style.css
@@ -400,6 +400,18 @@
   margin: 0px auto 15px;
 }
 
+.tingle-modal h1.platinum {
+  transform: scaleX(109%) translate(0, -3rem);
+  background-color: #002e67;
+  color: #fff;
+  font-weight: 600;
+  border-radius: 4px 4px 0 0;
+  padding: 3rem 3rem 2rem;
+  border-bottom: none;
+  font-size: 2em;
+  margin: 0;
+}
+
 .tingle-modal h2 {
   font-weight: 500;
   font-size: 1.3em;
