--- a/join-us/style.css
+++ b/join-us/style.css
@@ -412,6 +412,42 @@
   margin: 0;
 }
 
+.tingle-modal h1.gold {
+  transform: scaleX(109%) translate(0, -3rem);
+  background-color: #eec64f;
+  color: #000;
+  font-weight: 600;
+  border-radius: 4px 4px 0 0;
+  padding: 3rem 3rem 2rem;
+  border-bottom: none;
+  font-size: 2em;
+  margin: 0;
+}
+
+.tingle-modal h1.associate {
+  transform: scaleX(109%) translate(0, -3rem);
+  background-color: #5dc0cc;
+  color: #000;
+  font-weight: 600;
+  border-radius: 4px 4px 0 0;
+  padding: 3rem 3rem 2rem;
+  border-bottom: none;
+  font-size: 2em;
+  margin: 0;
+}
+
+.tingle-modal h1.individual {
+  transform: scaleX(109%) translate(0, -3rem);
+  background-color: #b1b2b4;
+  color: #000;
+  font-weight: 600;
+  border-radius: 4px 4px 0 0;
+  padding: 3rem 3rem 2rem;
+  border-bottom: none;
+  font-size: 2em;
+  margin: 0;
+}
+
 .tingle-modal h2 {
   font-weight: 500;
   font-size: 1.3em;
