--- a/join-us/style.css
+++ b/join-us/style.css
@@ -405,10 +405,11 @@
   background-color: #002e67;
   color: #fff;
   font-weight: 600;
+  text-align: center;
   border-radius: 4px 4px 0 0;
-  padding: 3rem 3rem 2rem;
+  padding: 1.5rem 3rem 1.4rem;
   border-bottom: none;
-  font-size: 2em;
+  font-size: 1.3em;
   margin: 0;
 }
 
@@ -417,10 +418,11 @@
   background-color: #eec64f;
   color: #000;
   font-weight: 600;
+  text-align: center;
   border-radius: 4px 4px 0 0;
-  padding: 3rem 3rem 2rem;
+  padding: 1.5rem 3rem 1.4rem;
   border-bottom: none;
-  font-size: 2em;
+  font-size: 1.3em;
   margin: 0;
 }
 
@@ -430,9 +432,9 @@
   color: #000;
   font-weight: 600;
   border-radius: 4px 4px 0 0;
-  padding: 3rem 3rem 2rem;
+  padding: 1.5rem 3rem 1.4rem;
   border-bottom: none;
-  font-size: 2em;
+  font-size: 1.3em;
   margin: 0;
 }
 
@@ -441,10 +443,12 @@
   background-color: #b1b2b4;
   color: #000;
   font-weight: 600;
+  text-align: center;
+  text-align: center;
   border-radius: 4px 4px 0 0;
-  padding: 3rem 3rem 2rem;
+  padding: 1.5rem 3rem 1.4rem;
   border-bottom: none;
-  font-size: 2em;
+  font-size: 1.3em;
   margin: 0;
 }
 
